Fix button mobile

--- a/src/app/modules/project/add/main/wizard/wizardPages/shared-wizard-styles.scss
+++ b/src/app/modules/project/add/main/wizard/wizardPages/shared-wizard-styles.scss
@@ -63,17 +63,13 @@ p {
 }
 
 .inline-input {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr auto;
 
   input {
     line-height: 3rem;
-    width: calc(100% - 135px);
+    width: 103%;
     margin: 0;
-    @media only screen and (max-width: 800px) {
-      width: calc(100% - 80px);
-    }
   }
 
   button {
@@ -82,6 +78,7 @@ p {
       width: fit-content;
       padding: 0 20px;
       margin-left: 0;
+      min-width: unset;
     }
   }
 }
